--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
 <div class="section">
   <h2>🌍 Social Science</h2>
-  <a href="pdfs/SSC/History1.pdf" class="button" target="_blank">History part-1</a>
-  <a href="pdfs/SSC/History2.pdf" class="button" target="_blank">History part-2</a>
+  <a href="pdfs/SSC/history1.pdf" class="button" target="_blank">History part-1</a>
+  <a href="pdfs/SSC/history2.pdf" class="button" target="_blank">History part-2</a>
   <a href="pdfs/SSC/Geography.pdf" class="button" target="_blank">Geography</a>
   <a href="pdfs/SSC/Polsc.pdf" class="button" target="_blank">Political Science</a>
   <a href="pdfs/SSC/Economics.pdf" class="button" target="_blank">Economics</a>
