--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 
 <div class="section">
   <h2>🧪 Science</h2>
-  <a href="pdfs/Science/Science.pdf" class="button" target="_blank">Science</a>
+  <a href="pdfs/Science/Sciencephysics.pdf" class="button" target="_blank">Science - Physics</a>
+  <a href="pdfs/Science/Sciencechemistry.pdf" class="button" target="_blank">Science - Chemistry</a>
+  <a href="pdfs/Science/Sciencebio.pdf" class="button" target="_blank">Science - Biology</a>
 </div>
 
 <div class="section">
